change wraper height to auto, fix visual problem

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,7 +39,7 @@ p{
 #wrapper{
   background: #222222;
   width: 500px;
-  height: 350px;
+  height: auto;
   position: relative;
   left: 28%;
 }
